# PyChase

./: CI-CD-Workflows.md  CLI-Reference.md  Comparison-with-Other-Tools.md  Configuration.md  Demo-Test-Suite.md  Getting-Started.md  Home.md  How-It-Works.md  README.md  demo_report.html  pyproject.toml
.github/workflows/: ci.yml  quality.yml  workflow.yml
demo/: 01_exact_clones.py  02_renamed_clones.py  03_modified_clones.py  04_class_duplicates.py  05_method_duplicates.py  06_large_clones.py  07_async_decorators.py  08_realworld_billing.py  09_realworld_validation.py  10_nested_blocks.py  11_mixed_duplicates.py  12_edge_cases.py  13_unique_code.py  14_big_compare.py
pychase/: __main__.py  cli.py  engine.py  formatter.py
wiki/: Home.md
