[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pychase"
version = "0.1.0"
description = "PyChase - chases down duplicate and structurally similar Python code across your project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []
authors = [
  {name = "Rudra644", email = "ankitchandwada007@gmail.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Mayne-X/PyChase"
Repository = "https://github.com/Mayne-X/PyChase"
Documentation = "https://github.com/Mayne-X/PyChase/wiki"
Issues = "https://github.com/Mayne-X/PyChase/issues"

[project.scripts]
pychase = "pychase.cli:main"

[tool.pychase]
threshold = 0.82
min-lines = 4
min-nodes = 20
format = "text"
shingle-size = 3
num-perm = 256
num-bands = 16
rows-per-band = 16
